--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <i class="uil uil-bars"></i>
           </button>
           <a href="#" class="nav-logo">
-            <img src="images\50.PNG" alt="Logo" class="logo-image">
+            <img src="images\50.png" alt="Logo" class="logo-image">
             <h2 class="logo-text">HAMOUDATUBE</h2>
           </a>
         </div>
