--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           <button class="nav-button theme-button">
             <i class="uil uil-moon"></i>
           </button>
-          <img src="images/00.jpEg" alt="User Image" class="user-image">
+          <img src="images\00.jpeg" alt="User Image" class="user-image">
         </div>
       </nav>
     </header>
