--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
               <p class="duration">10:03</p>
             </div>
             <div class="video-info">
-              <img src="images\50.PNG" alt="Channel Logo" class="icon">
+              <img src="images\50.png" alt="Channel Logo" class="icon">
               <div class="video-details">
                 <h2 class="title">Top 10  To Create LOGIN/SIGNUP JavaScript</h2>
                 <p class="channel-name">ABDO HAMOUDA</p>
@@ -183,7 +183,7 @@
               <p class="duration">23:45</p>
             </div>
             <div class="video-info">
-              <img src="images\50.PNG" alt="Channel Logo" class="icon">
+              <img src="images\50.png" alt="Channel Logo" class="icon">
               <div class="video-details">
                 <h2 class="title">How to make Responsive Card Images Slider in HTML CSS & JavaScript</h2>
                 <p class="channel-name">ABDO HAMOUDA</p>
@@ -197,7 +197,7 @@
               <p class="duration">29:43</p>
             </div>
             <div class="video-info">
-              <img src="images\50.PNG" alt="Channel Logo" class="icon">
+              <img src="images\50.png" alt="Channel Logo" class="icon">
               <div class="video-details">
                 <h2 class="title">Create A Responsive Website with Login & Registration Form in HTML CSS and JavaScript</h2>
                 <p class="channel-name">ABDO HAMOUDA</p>
@@ -211,7 +211,7 @@
               <p class="duration">38:45</p>
             </div>
             <div class="video-info">
-              <img src="images\50.PNG" alt="Channel Logo" class="icon">
+              <img src="images\50.png" alt="Channel Logo" class="icon">
               <div class="video-details">
                 <h2 class="title">Build Hover in HTML CSS and JavaScript</h2>
                 <p class="channel-name">CodingNepal</p>
@@ -225,7 +225,7 @@
               <p class="duration">19:27</p>
             </div>
             <div class="video-info">
-              <img src="images\50.PNG" alt="Channel Logo" class="icon">
+              <img src="images\50.png" alt="Channel Logo" class="icon">
               <div class="video-details">
                 <h2 class="title">How to Make STORE ONLINE SHOP in HTML CSS & JavaScript</h2>
                 <p class="channel-name">CodingNepal</p>
@@ -239,7 +239,7 @@
               <p class="duration">16:24</p>
             </div>
             <div class="video-info">
-              <img src="images\50.PNG" alt="Channel Logo" class="icon">
+              <img src="images\50.png" alt="Channel Logo" class="icon">
               <div class="video-details">
                 <h2 class="title">Create A Responsive Website with BLURE Login & Registration Form in HTML CSS and JavaScript</h2>
                 <p class="channel-name">CodingNepal</p>
@@ -253,7 +253,7 @@
               <p class="duration">37:13</p>
             </div>
             <div class="video-info">
-              <img src="images\50.PNG" alt="Channel Logo" class="icon">
+              <img src="images\50.png" alt="Channel Logo" class="icon">
               <div class="video-details">
                 <h2 class="title">Create A Responsive Website with IPHONE Login & Registration Form in HTML CSS and JavaScript</h2>
                 <p class="channel-name">CodingLab</p>
@@ -267,7 +267,7 @@
               <p class="duration">9:27</p>
             </div>
             <div class="video-info">
-              <img src="images\50.PNG" alt="Channel Logo" class="icon">
+              <img src="images\50.png" alt="Channel Logo" class="icon">
               <div class="video-details">
                 <h2 class="title">Create Text Typing WHITE BOARD in HTML CSS & Vanilla JavaScript</h2>
                 <p class="channel-name">CodingNepal</p>
@@ -281,7 +281,7 @@
               <p class="duration">25:27</p>
             </div>
             <div class="video-info">
-              <img src="images\50.PNG" alt="Channel Logo" class="icon">
+              <img src="images\50.png" alt="Channel Logo" class="icon">
               <div class="video-details">
                 <h2 class="title">Create Responsive SOCIAL ICONS in HTML CSS and JavaScript</h2>
                 <p class="channel-name">CodingNepal</p>
@@ -295,7 +295,7 @@
               <p class="duration">12:24</p>
             </div>
             <div class="video-info">
-              <img src="images\50.PNG" alt="Channel Logo" class="icon">
+              <img src="images\50.png" alt="Channel Logo" class="icon">
               <div class="video-details">
                 <h2 class="title">HOW TO CREAT A XO GAME IN HTML,CSS,JAVASCRIPT</h2>
                 <p class="channel-name">CodingLab</p>
@@ -309,7 +309,7 @@
               <p class="duration">30:20</p>
             </div>
             <div class="video-info">
-              <img src="images\50.PNG" alt="Channel Logo" class="icon">
+              <img src="images\50.png" alt="Channel Logo" class="icon">
               <div class="video-details">
                 <h2 class="title"></h2>
                 <p class="channel-name">CodingNepal</p>
@@ -323,7 +323,7 @@
               <p class="duration">11:13</p>
             </div>
             <div class="video-info">
-              <img src="images\50.PNG" alt="Channel Logo" class="icon">
+              <img src="images\50.png" alt="Channel Logo" class="icon">
               <div class="video-details">
                 <h2 class="title">Build A Responsive Calculator in HTML CSS & JavaScript</h2>
                 <p class="channel-name">CodingLab</p>
@@ -337,7 +337,7 @@
               <p class="duration">39:43</p>
             </div>
             <div class="video-info">
-              <img src="images\50.PNG" alt="Channel Logo" class="icon">
+              <img src="images\50.png" alt="Channel Logo" class="icon">
               <div class="video-details">
                 <h2 class="title">Build A Currency Converter using ReactJS</h2>
                 <p class="channel-name">CodingNepal</p>
@@ -351,7 +351,7 @@
               <p class="duration">1:37:13</p>
             </div>
             <div class="video-info">
-              <img src="images\50.PNG" alt="Channel Logo" class="icon">
+              <img src="images\50.png" alt="Channel Logo" class="icon">
               <div class="video-details">
                 <h2 class="title">Responsive Admin Dashboard Panel in HTML CSS and JavaScript</h2>
                 <p class="channel-name">CodingLab</p>
